# kafka-on-the-shore

./: README.md  REAMDE.md  data_processing.py  event_consumer.py  main.py  openweather_utils.py  pyproject.toml  requirements.txt  surreal_events.py  weather_consumers.py  weather_producer.py
consolidation/: Dockerfile  Makefile  consolidate_files.py  docker-compose.yml  openweather_utils.py  requirements.txt
kafka/: docker-compose.yml
terraform/: main.tf  provider.tf  terraform.tfvars.template  variables.tf
terraform/templates/: Makefile.tpl  data_json.tpl
